# scheduler

./: .gitignore  Dockerfile  Gopkg.toml  LICENSE  Makefile  README.md  pyproject.toml
cmd/scheduler/: main.go
deployments/chart/scheduler/: Chart.yaml  README.md  values.yaml
deployments/chart/scheduler/templates/: deployment.yaml  ingress.yaml  rbac.yaml  service.yaml
infra/ansible/: base.yml
infra/ansible/roles/docker/: README.md
infra/ansible/roles/docker/defaults/: main.yml
infra/ansible/roles/docker/molecule/default/: molecule.yml
infra/ansible/roles/docker/tasks/: main.yml
infra/ansible/roles/kube-stack/: README.md
infra/ansible/roles/kube-stack/defaults/: main.yml
infra/ansible/roles/kube-stack/files/: kubeadm-config.yml
infra/ansible/roles/kube-stack/molecule/default/: playbook.yml
infra/ansible/roles/kube-stack/tasks/: main.yml
infra/cloudformation/: stack.yml
infra/cloudformation/ci/: input.json  taskcat.yml  us-west-2-input.json
infra/cloudformation/templates/: packer.yml  stack.yml
infra/packer/: debian-base.json
internal/app/: main.go
pkg/: convert.go  k8s.go  k8s_cronjob_test.go  k8s_job_test.go  k8s_test.go  simplejob.go
pkg/api/: scheduled.go  simple.go  utils.go
pkg/k8s/: cronjob.go  cronjob_test.go  job.go  job_test.go  k8s.go
scripts/: latest_base_ami.py  simplejob.py
