[tool.poetry]
name = "scheduler"
version = "0.1.0"
description = "Simple API to schedule Simple Jobs on top of Kubernetes"
authors = ["Gabriel Tiossi <gabrieltiossi@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tioxy/panoptes"
repository = "https://github.com/tioxy/panoptes"
keywords = [
    "kubernetes", "docker", "jobs", "scheduler"
]

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.9"
requests = "^2.21"
ansible = "^4.2"
docker = "^3.7"
molecule = "^2.20"
taskcat = "^0.8.32"
awscli = "^1.16"
cryptography = "^2.6"
paramiko = "^2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
